--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ nav:
     #文章过少，暂时不需要分标签和所有文章
     - {title: 福利, description: gifts, url: '/gifts'}
     - {title: 归档, description: archive, url: '/archive'}
-    #- {title: 标签, description: tags, url: '/tags'}
+    - {title: 学术, description: scholar, url: '/scholar'}
     - {title: 标签, description: tags, url: '/tags'}   
     - {title: 搜索, description: search, url: '/search'}   
     - {title: 学术导航, description: ScholarNavi, url: '/ScholarNavi'}   
